Sutter Health/src/objects/PCP_Information__c.object
<CustomObject>
    <description>PCP Information stored for Member (Contact)</description>
    <fields>
        <fullName>Medical_Group_Affiliation__c</fullName>
        <label>Medical Group Affiliation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PCP Informations</relationshipLabel>
        <relationshipName>PCP_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCP_Effective_date__c</fullName>
        <label>PCP Effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCP_External_ID__c</fullName>
        <description>External ID used to match a PCP record to the original record in HealthEdge when updating and/or inserting.
 Composite key created from the concatenation of PCP_Member_HR_ID__c  +  PCP_Practitioner_HR_ID__C</description>
        <externalId>true</externalId>
        <label>PCP External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCP_Member_HR_ID__c</fullName>
        <label>PCP Member HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Practitioner_First_Name__c</fullName>
        <label>PCP Practitioner First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Practitioner_HR_ID__c</fullName>
        <label>PCP Practitioner HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Practitioner_Last_Name__c</fullName>
        <label>PCP Practitioner Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Practitioner_Middle_Name__c</fullName>
        <label>PCP Practitioner Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Practitioner_NPI__c</fullName>
        <label>PCP Practitioner NPI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Practitioner_Name__c</fullName>
        <label>PCP Practitioner Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Speciality__c</fullName>
        <label>PCP Speciality</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Specialty_HCC_ID__c</fullName>
        <label>PCP Specialty HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Specialty_HR_ID__c</fullName>
        <label>PCP Specialty HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Specialty_Sub_HCC_ID__c</fullName>
        <label>PCP Specialty-Sub HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Specialty_Sub_HR_ID__c</fullName>
        <label>PCP Specialty-Sub HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Supplier_Location_HR_ID__c</fullName>
        <label>PCP Supplier Location HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Supplier_Location_name__c</fullName>
        <label>PCP Supplier Location name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Supplier_NPI__c</fullName>
        <label>PCP Supplier NPI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Supplier_Name__c</fullName>
        <label>PCP Supplier Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Termination_Date__c</fullName>
        <label>PCP Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCP_sub_Specialty__c</fullName>
        <label>PCP sub-Specialty</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_PCP_Auto_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practitioner PCP Auto Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPS_Epic_ID__c</fullName>
        <label>SPS Epic ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PCP Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Medical_Group_Affiliation__c</columns>
        <columns>Member_ID__c</columns>
        <columns>PCP_Effective_date__c</columns>
        <columns>PCP_External_ID__c</columns>
        <columns>PCP_Member_HR_ID__c</columns>
        <columns>PCP_Practitioner_First_Name__c</columns>
        <columns>PCP_Practitioner_HR_ID__c</columns>
        <columns>PCP_Practitioner_Last_Name__c</columns>
        <columns>PCP_Practitioner_Middle_Name__c</columns>
        <columns>PCP_Practitioner_Name__c</columns>
        <columns>PCP_Practitioner_NPI__c</columns>
        <columns>PCP_Specialty_HCC_ID__c</columns>
        <columns>PCP_Specialty_HR_ID__c</columns>
        <columns>PCP_Specialty_Sub_HCC_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Practitioner_PCP_Auto_Assigned__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PCP Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PCP Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>